<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/detail_ppmid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppmid"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_ppmid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_ppmid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_planning_cycle_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/planning_cycle"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_planning_cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_planning_cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />


            <TextView
                android:id="@+id/detail_project_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/project_name"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/contact"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/comments"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_teams_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/teams"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_complete_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/complete"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_big_margin"
                android:text="@string/status"
                android:textColor="@color/detail_title"
                android:textSize="@dimen/detail_activity_title_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size" />

            <TextView
                android:id="@+id/detail_old_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textSize="@dimen/detail_activity_font_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/detail_last_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_small_margin"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/detail_activity_small_font_size" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_assign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_assign_bg"
            android:text="@string/assign"
            android:textColor="@android:color/white"
            android:textSize="@dimen/detail_activity_button_font_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_working_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_status_bg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/detail_activity_button_font_size"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>